--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,13 @@ attrs==23.2.0
 discord.py==2.3.2
 frozenlist==1.4.1
 idna==3.6
+iniconfig==2.0.0
 multidict==6.0.5
+mypy==1.8.0
+mypy-extensions==1.0.0
+packaging==23.2
+pluggy==1.4.0
+pytest==8.0.0
 python-dotenv==1.0.1
+typing_extensions==4.9.0
 yarl==1.9.4
