--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,30 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
 attrs==23.2.0
+black==24.2.0
+cfgv==3.4.0
+click==8.1.7
 discord.py==2.3.2
+distlib==0.3.8
+filelock==3.13.1
 frozenlist==1.4.1
+identify==2.5.34
 idna==3.6
 iniconfig==2.0.0
+install==1.3.5
 multidict==6.0.5
 mypy==1.8.0
 mypy-extensions==1.0.0
+nodeenv==1.8.0
 packaging==23.2
+pathspec==0.12.1
+platformdirs==4.2.0
 pluggy==1.4.0
+pre-commit==3.6.1
 pytest==8.0.0
 python-dotenv==1.0.1
+PyYAML==6.0.1
+ruff==0.2.1
 typing_extensions==4.9.0
+virtualenv==20.25.0
 yarl==1.9.4
