--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ platformdirs==4.2.0
 pluggy==1.4.0
 pre-commit==3.6.1
 pytest==8.0.0
+pytest-asyncio==0.23.5
 python-dotenv==1.0.1
 PyYAML==6.0.1
 ruff==0.2.1
